4.0.6
 * Fix race condition on updating cdc size and advancing to next segment (CASSANDRA-17792)
 * Add 'noboolean' rpm build for older distros like CentOS7 (CASSANDRA-17765)
 * Fix default value for compaction_throughput_mb_per_sec in Config class to match  the one in cassandra.yaml (CASSANDRA-17790)
 * Fix Setting Virtual Table - update after startup config properties gc_log_threshold_in_ms, gc_warn_threshold_in_ms,
   conf.index_summary_capacity_in_mb, prepared_statements_cache_size_mb, key_cache_size_in_mb, counter_cache_size_in_mb
   (CASSANDRA-17737)
 * Fix Settings Virtual Table - index_summary_resize_interval and index_summary_capacity were not updated after startup (CASSANDRA-17735)
 * Clean up ScheduledExecutors, CommitLog, and MessagingService shutdown for in-JVM dtests (CASSANDRA-17731)
 * Remove extra write to system table for prepared statements (CASSANDRA-17764)
Merged from 3.11:
 * Document usage of closed token intervals in manual compaction (CASSANDRA-17575)
Merged from 3.0:
 * Improve libjemalloc resolution in bin/cassandra (CASSANDRA-15767)
 * Fix restarting of services on gossipping-only member (CASSANDRA-17752)

4.0.5
 * Utilise BTree improvements to reduce garbage and improve throughput (CASSANDRA-15511)
 * Make sure existing delayed tasks in StreamTransferTask cannot prevent clean shutdown (CASSANDRA-17706)
 * SSL storage port in sstableloader is deprecated (CASSANDRA-17602)
 * Fix counter write timeouts at ONE (CASSANDRA-17411)
 * Fix NPE in getLocalPrimaryRangeForEndpoint (CASSANDRA-17680)
 * Remove SSL storage port from sstableloader (CASSANDRA-17602)
 * Allow Java 11 to satisfy RPM/Debian packaging (CASSANDRA-17669)
 * Ensure FileStreamTask cannot compromise shared channel proxy for system table when interrupted (CASSANDRA-17663)
 * silence benign SslClosedEngineException (CASSANDRA-17565)
Merged from 3.11:
 * Creating of a keyspace on insufficient number of replicas should filter out gosspping-only members (CASSANDRA-17759)